--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,24 +15,24 @@ services:
     networks:
       - network
 
-  # electro-server:
-  #   container_name: electro-server
-  #   image: electro-server
-  #   restart: on-failure
-  #   depends_on:
-  #     electro-database:
-  #       condition: service_healthy
-  #   build:
-  #     context: electro-server
-  #     dockerfile: Dockerfile
-  #   environment:
-  #     SPRING_DATASOURCE_URL: jdbc:mysql://electro-database:3306/electro
-  #     SPRING_DATASOURCE_USERNAME: root
-  #     SPRING_DATASOURCE_PASSWORD: 12345
-  #   ports:
-  #     - 8085:8085
-  #   networks:
-  #     - network
+  electro-server:
+    container_name: electro-server
+    image: electro-server
+    restart: on-failure
+    depends_on:
+      electro-database:
+        condition: service_healthy
+    build:
+      context: electro-server
+      dockerfile: Dockerfile
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://electro-database:3306/electro
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: 12345
+    ports:
+      - 8085:8085
+    networks:
+      - network
 
   electro-database:
     container_name: electro-database
